--- a/templates/server.conf.erb
+++ b/templates/server.conf.erb
@@ -21,7 +21,7 @@ root_password_sha2 = <%= @root_password_sha2 %>
 plugin_dir = /opt/graylog2/server/plugin
 
 # REST API listen URI. Must be reachable by other graylog2-server nodes if you run a cluster.
-rest_listen_uri = http://127.0.0.1:12900/
+rest_listen_uri = <%= @rest_listen_uri %>
 # REST API transport address. Defaults to first non-loopback IPv4 system address and port 12900.
 # This will be promoted in the cluster discovery APIs and other nodes may try to connect on this
 # address. (see rest_listen_uri)
