--- a/templates/server.conf.erb
+++ b/templates/server.conf.erb
@@ -13,6 +13,8 @@ password_secret = <%= @password_secret %>
 root_username = <%= @root_username %>
 # You MUST specify a hash password for the root user (which you only need to initially set up the
 # system and in case you lose connectivity to your authentication backend)
+# This password cannot be changed using the API or via the web interface. If you need to change it,
+# modify it in this file.
 # Create one by using for example: echo -n yourpassword | shasum -a 256
 # and put the resulting hash value into the following line
 root_password_sha2 = <%= @root_password_sha2 %>
@@ -25,10 +27,21 @@ rest_listen_uri = <%= @rest_listen_uri %>
 # REST API transport address. Defaults to first non-loopback IPv4 system address and port 12900.
 # This will be promoted in the cluster discovery APIs and other nodes may try to connect on this
 # address. (see rest_listen_uri)
-#rest_transport_uri = http://192.168.1.1:12900/
 <% if @rest_transport_uri %>
 rest_transport_uri = <%= @rest_transport_uri %>
+<% else %>
+#rest_transport_uri = http://192.168.1.1:12900/
 <% end %>
+
+# Enable CORS headers for REST api. This is necessary for JS-clients accessing the server directly.
+# If these are disabled, modern browsers will not be able to retrieve resources from the server.
+# This is disabled by default. Uncomment the next line to enable it.
+rest_enable_cors = <%= @rest_enable_cors %>
+
+# Enable GZIP support for REST api. This compresses API responses and therefore helps to reduce
+# overall round trip times. This is disabled by default. Uncomment the next line to enable it.
+rest_enable_gzip = <%= @rest_enable_gzip %>
+
 # Embedded elasticsearch configuration file
 # pay attention to the working directory of the server, maybe use an absolute path here
 #elasticsearch_config_file = /etc/graylog2-elasticsearch.yml
@@ -58,6 +71,10 @@ elasticsearch_index_prefix = <%= @elasticsearch_index_prefix %>
 # be enabled with care. See also: http://support.torch.sh/help/kb/graylog2-web-interface/the-search-bar-explained
 allow_leading_wildcard_searches = <%= @allow_leading_wildcard_searches %>
 
+# Do you want to allow searches to be highlighted? Depending on the size of your messages this can be memory hungry and
+# should only be enabled after making sure your elasticsearch cluster has enough memory.
+allow_highlighting = <%= @allow_highlighting %>
+
 # settings to be passed to elasticsearch's client (overriding those in the provided elasticsearch_config_file)
 # all these
 # this must be the same as for your elasticsearch cluster
@@ -78,8 +95,26 @@ allow_leading_wildcard_searches = <%= @allow_leading_wildcard_searches %>
 #elasticsearch_discovery_zen_ping_multicast_enabled = false
 #elasticsearch_discovery_zen_ping_unicast_hosts = 192.168.1.203:9300
 
+# the following settings allow to change the bind addresses for the elasticsearch client in graylog2
+# these settings are empty by default, letting elasticsearch choose automatically,
+# override them here or in the 'elasticsearch_config_file' if you need to bind to a special address
+# refer to http://www.elasticsearch.org/guide/en/elasticsearch/reference/0.90/modules-network.html for special values here
 <% if @elasticsearch_network_host %>
 elasticsearch_network_host = <%= @elasticsearch_network_host %>
+<% else %>
+# elasticsearch_network_host =
+<% end %>
+
+<% if @elasticsearch_network_bind_host %>
+elasticsearch_network_bind_host = <%= @elasticsearch_network_bind_host %>
+<% else %>
+# elasticsearch_network_bind_host =
+<% end %>
+
+<% if @elasticsearch_network_publish_host %>
+elasticsearch_network_publish_host = <%= @elasticsearch_network_publish_host %>
+<% else %>
+# elasticsearch_network_publish_host =
 <% end %>
 
 # Analyzer (tokenizer) to use for message and full_message field. The "standard" filter usually is a good idea.
@@ -117,6 +152,18 @@ processor_wait_strategy = <%= @processor_wait_strategy %>
 # Start server with --statistics flag to see buffer utilization.
 # Must be a power of 2. (512, 1024, 2048, ...)
 ring_size = <%= @ring_size %>
+
+# EXPERIMENTAL: Dead Letters
+# Every failed indexing attempt is logged by default and made visible in the web-interface. You can enable
+# the experimental dead letters feature to write every message that was not successfully indexed into the
+# MongoDB "dead_letters" collection to make sure that you never lose a message. The actual writing of dead
+# letter should work fine already but it is not heavily tested yet and will get more features in future
+# releases.
+dead_letters_enabled = <%= @dead_letters_enabled %>
+
+# How many seconds to wait between marking node as DEAD for possible load balancers and starting the actual
+# shutdown process. Set to 0 if you have no status checking load balancers in front.
+lb_recognition_period_seconds = <%= @lb_recognition_period_seconds %>
 
 # MongoDB Configuration
 mongodb_useauth = <%= @mongodb_useauth %>
@@ -159,3 +206,19 @@ transport_email_auth_username = <%= @transport_email_auth_username %>
 transport_email_auth_password = <%= @transport_email_auth_password %>
 transport_email_subject_prefix = <%= @transport_email_subject_prefix %>
 transport_email_from_email = <%= @transport_email_from_email %>
+
+# Specify and uncomment this if you want to include links to the stream in your stream alert mails.
+# This should define the fully qualified base url to your web interface exactly the same way as it is accessed by your users.
+#
+<% if @transport_email_web_interface_url %>
+transport_email_web_interface_url = <%= @transport_email_web_interface_url %>
+<% else %>
+# transport_email_web_interface_url = https://graylog2.example.com
+<% end %>
+
+# HTTP proxy for outgoing HTTP calls
+<% if @http_proxy_uri %>
+http_proxy_uri = <%= @http_proxy_uri %>
+<% else %>
+#http_proxy_uri = 
+<% end %>
