Add warning to puppet managed files.

--- a/templates/graylog2-web-interface.conf.erb
+++ b/templates/graylog2-web-interface.conf.erb
@@ -1,3 +1,5 @@
+# WARNING: Maintained by Puppet. Manual changes will be lost!
+
 # graylog2-server REST URIs (one or more, comma separated) For example: "http://127.0.0.1:12900/,http://127.0.0.1:12910/"
 graylog2-server.uris="<%= @graylog2_server_uris.join(",") %>"
 
