--- a/templates/server.conf.erb
+++ b/templates/server.conf.erb
@@ -1,3 +1,5 @@
+# WARNING: Maintained by Puppet. Manual changes will be lost!
+
 # If you are running more than one instances of graylog2-server you have to select one of these
 # instances as master. The master will perform some periodical tasks that non-masters won't perform.
 is_master = <%= @is_master %>
