--- a/templates/server.conf.erb
+++ b/templates/server.conf.erb
@@ -295,6 +295,18 @@ message_cache_spool_dir = <%= @message_cache_spool_dir %>
 # The commit interval for the message cache in milliseconds. Only affects message cache implementations that need to commit data.
 message_cache_commit_interval = <%= @message_cache_commit_interval %>
 
+# When more messages are coming in as we can process, incoming messages will be cached in memory until
+# they are ready to be processed. Per default this data structure is unbounded, so in situations of
+# constant high load, it will grow endlessly until all allocatable memory has been consumed and the
+# process dies.
+# To prevent this, the next setting allows you to define an upper bound for this memory cache, if the
+# number of messages in the cache has reached this limit, incoming messages will be dropped until it
+# has shrunk again.
+#
+# The default is 0, which means no upper bound.
+#
+input_cache_max_size = <%= @input_cache_max_size %>
+
 # Connection timeout for a configured LDAP server (e. g. ActiveDirectory) in milliseconds.
 ldap_connection_timeout = <%= @ldap_connection_timeout %>
 
