--- a/templates/graylog2-radio.conf.erb
+++ b/templates/graylog2-radio.conf.erb
@@ -1,3 +1,5 @@
+# WARNING: Maintained by Puppet. Manual changes will be lost!
+
 # The auto-generated node ID will be stored in this file and read after restarts. It is a good idea
 # to use an absolute file path here if you are starting graylog2-radio from init scripts or similar.
 node_id_file = <%= @node_id_file %>
