--- a/templates/radio.default.erb
+++ b/templates/radio.default.erb
@@ -1,3 +1,5 @@
+# WARNING: Maintained by Puppet. Manual changes will be lost!
+
 # Might be used to adjust the Java heap size. (i.e. "-Xms1024m -Xmx2048m")
 GRAYLOG2_RADIO_JAVA_OPTS="<%= @java_opts %>"
 
