Add "command_wrapper" option for server, radio and web.
Allows usage of authbind. Fixes #1.

--- a/templates/server.default.erb
+++ b/templates/server.default.erb
@@ -8,4 +8,4 @@ GRAYLOG2_SERVER_ARGS="<%= @extra_args %>"
 
 # Program that will be used to wrap the graylog2-server command. Useful to
 # support programs like authbind.
-GRAYLOG2_COMMAND_WRAPPER=""
+GRAYLOG2_COMMAND_WRAPPER="<%= @command_wrapper %>"
