--- a/templates/web.default.erb
+++ b/templates/web.default.erb
@@ -12,4 +12,4 @@ GRAYLOG2_WEB_ARGS=""
 
 # Program that will be used to wrap the graylog2-server command. Useful to
 # support programs like authbind.
-GRAYLOG2_COMMAND_WRAPPER=""
+GRAYLOG2_COMMAND_WRAPPER="<%= @command_wrapper %>"
