--- a/templates/graylog2-web-interface.conf.erb
+++ b/templates/graylog2-web-interface.conf.erb
@@ -4,7 +4,7 @@
 graylog2-server.uris="<%= @graylog2_server_uris.join(",") %>"
 
 # Learn how to configure custom logging in the documentation:
-#    http://support.torch.sh/help/kb/graylog2-web-interface/configuring-web-interface-logging
+#    https://www.graylog.org/documentation/setup/webinterface/
 
 # Secret key
 # ~~~~~
@@ -14,8 +14,8 @@ graylog2-server.uris="<%= @graylog2_server_uris.join(",") %>"
 application.secret="<%= @application_secret %>"
 
 # Web interface timezone
-# Graylog2 stores all timestamps in UTC. To properly display times, set the default timezone of the interface.
-# If you leave this out, Graylog2 will pick your system default as the timezone. Usually you will want to configure it explicitly.
+# Graylog stores all timestamps in UTC. To properly display times, set the default timezone of the interface.
+# If you leave this out, Graylog will pick your system default as the timezone. Usually you will want to configure it explicitly.
 <% if @timezone %>
 # Ping interval for Mongo monitoring server.
 timezone=<%= @timezone %>
@@ -29,7 +29,7 @@ timezone=<%= @timezone %>
 # search result sidebar or for autocompletion of field names.
 field_list_limit=<%= @field_list_limit %>
 
-# Use this to run Graylog2 with a path prefix
+# Use this to run Graylog with a path prefix
 <% if @http_path_prefix %>
 application.context=<%= @http_path_prefix %>
 <% else %>
