--- a/templates/radio.sysconfig.erb
+++ b/templates/radio.sysconfig.erb
@@ -3,12 +3,12 @@
 # Path to the java executable.
 JAVA=/usr/bin/java
 
-# Might be used to adjust the Java heap size. (i.e. "-Xms1024m -Xmx2048m")
-GRAYLOG2_RADIO_JAVA_OPTS="<%= @java_opts %>"
+# Default Java options for heap and garbage collection.
+GRAYLOG_RADIO_JAVA_OPTS="<%= @java_opts %>"
 
-# Pass some extra args to graylog2-radio. (i.e. "-d" to enable debug mode)
-GRAYLOG2_RADIO_ARGS="<%= @extra_args %>"
+# Pass some extra args to graylog-radio. (i.e. "-d" to enable debug mode)
+GRAYLOG_RADIO_ARGS="<%= @extra_args %>"
 
-# Program that will be used to wrap the graylog2-server command. Useful to
+# Program that will be used to wrap the graylog-server command. Useful to
 # support programs like authbind.
-GRAYLOG2_COMMAND_WRAPPER="<%= @command_wrapper %>"
+GRAYLOG_COMMAND_WRAPPER="<%= @command_wrapper %>"
