--- a/templates/server.conf.erb
+++ b/templates/server.conf.erb
@@ -1,18 +1,20 @@
 # WARNING: Maintained by Puppet. Manual changes will be lost!
 
-# If you are running more than one instances of graylog2-server you have to select one of these
+# If you are running more than one instances of graylog-server you have to select one of these
 # instances as master. The master will perform some periodical tasks that non-masters won't perform.
 is_master = <%= @is_master %>
 
 # The auto-generated node ID will be stored in this file and read after restarts. It is a good idea
-# to use an absolute file path here if you are starting graylog2-server from init scripts or similar.
+# to use an absolute file path here if you are starting graylog-server from init scripts or similar.
 node_id_file = <%= @node_id_file %>
 
 # You MUST set a secret to secure/pepper the stored user passwords here. Use at least 64 characters.
 # Generate one by using for example: pwgen -N 1 -s 96
 password_secret = <%= @password_secret %>
+
 # the default root user is named 'admin'
 root_username = <%= @root_username %>
+
 # You MUST specify a hash password for the root user (which you only need to initially set up the
 # system and in case you lose connectivity to your authentication backend)
 # This password cannot be changed using the API or via the web interface. If you need to change it,
@@ -21,10 +23,18 @@ root_username = <%= @root_username %>
 # and put the resulting hash value into the following line
 root_password_sha2 = <%= @root_password_sha2 %>
 
+# The email address of the root user.
+# Default is empty
+root_email = <%= @root_email %>
+
+# The time zone setting of the root user.
+# Default is UTC
+root_timezone = <%= @root_timezone %>
+
 # Set plugin directory here (relative or absolute)
 plugin_dir = <%= @plugin_dir %>
 
-# REST API listen URI. Must be reachable by other graylog2-server nodes if you run a cluster.
+# REST API listen URI. Must be reachable by other graylog-server nodes if you run a cluster.
 rest_listen_uri = <%= @rest_listen_uri %>
 
 # REST API transport address. Defaults to the value of rest_listen_uri. Exception: If rest_listen_uri
@@ -33,12 +43,12 @@ rest_listen_uri = <%= @rest_listen_uri %>
 # address. (see rest_listen_uri)
 rest_transport_uri = <%= @rest_transport_uri %>
 
-# Enable CORS headers for REST api. This is necessary for JS-clients accessing the server directly.
+# Enable CORS headers for REST API. This is necessary for JS-clients accessing the server directly.
 # If these are disabled, modern browsers will not be able to retrieve resources from the server.
 # This is disabled by default. Uncomment the next line to enable it.
 rest_enable_cors = <%= @rest_enable_cors %>
 
-# Enable GZIP support for REST api. This compresses API responses and therefore helps to reduce
+# Enable GZIP support for REST API. This compresses API responses and therefore helps to reduce
 # overall round trip times. This is disabled by default. Uncomment the next line to enable it.
 rest_enable_gzip = <%= @rest_enable_gzip %>
 
@@ -77,19 +87,21 @@ rest_max_header_size = <%= @rest_max_header_size %>
 # The maximal length of the initial HTTP/1.1 line in bytes.
 rest_max_initial_line_length = <%= @rest_max_initial_line_length %>
 
-# The size of the thread pool used exclusively for serving the REST API.
+# The size of the execution handler thread pool used exclusively for serving the REST API.
 rest_thread_pool_size = <%= @rest_thread_pool_size %>
+
+# The size of the worker thread pool used exclusively for serving the REST API.
+rest_worker_threads_max_pool_size = <%= @rest_worker_threads_max_pool_size %>
 
 # Embedded Elasticsearch configuration file
 # pay attention to the working directory of the server, maybe use an absolute path here
-#elasticsearch_config_file = /etc/graylog2-elasticsearch.yml
 <% if @elasticsearch_config_file %>
 elasticsearch_config_file = <%= @elasticsearch_config_file %>
 <% else %>
-#elasticsearch_config_file = /etc/graylog2-elasticsearch.yml
+#elasticsearch_config_file = /etc/graylog/server/elasticsearch.yml
 <% end %>
 
-# Graylog2 will use multiple indices to store documents in. You can configured the strategy it uses to determine
+# Graylog will use multiple indices to store documents in. You can configured the strategy it uses to determine
 # when to rotate the currently active write index.
 # It supports multiple rotation strategies:
 #   - "count" of messages per index, use elasticsearch_max_docs_per_index below to configure
@@ -119,8 +131,8 @@ elasticsearch_max_size_per_index = <%= @elasticsearch_max_size_per_index %>
 # Permitted suffixes are: d for day, h for hour, m for minute, s for second.
 elasticsearch_max_time_per_index = <%= @elasticsearch_max_time_per_index %>
 
-# Disable checking the version of Elasticsearch for being compatible with this Graylog2 release.
-# WARNING: Using Graylog2 with unsupported and untested versions of Elasticsearch may lead to data loss!
+# Disable checking the version of Elasticsearch for being compatible with this Graylog release.
+# WARNING: Using Graylog with unsupported and untested versions of Elasticsearch may lead to data loss!
 elasticsearch_disable_version_check = <%= @elasticsearch_disable_version_check %>
 
 # Disable message retention on this node, i. e. disable Elasticsearch index rotation.
@@ -140,11 +152,11 @@ retention_strategy = <%= @retention_strategy %>
 elasticsearch_shards = <%= @elasticsearch_shards %>
 elasticsearch_replicas = <%= @elasticsearch_replicas %>
 
-# Prefix for all Elasticsearch indices and index aliases managed by Graylog2.
+# Prefix for all Elasticsearch indices and index aliases managed by Graylog.
 elasticsearch_index_prefix = <%= @elasticsearch_index_prefix %>
 
 # Do you want to allow searches with leading wildcards? This can be extremely resource hungry and should only
-# be enabled with care. See also: http://support.torch.sh/help/kb/graylog2-web-interface/the-search-bar-explained
+# be enabled with care. See also: https://www.graylog.org/documentation/general/queries/
 allow_leading_wildcard_searches = <%= @allow_leading_wildcard_searches %>
 
 # Do you want to allow searches to be highlighted? Depending on the size of your messages this can be memory hungry and
@@ -225,6 +237,12 @@ output_batch_size = <%= @output_batch_size %>
 # for this time period is less than output_batch_size * outputbuffer_processors.
 output_flush_interval = <%= @output_flush_interval %>
 
+# As stream outputs are loaded only on demand, an output which is failing to initialize will be tried over and
+# over again. To prevent this, the following configuration options define after how many faults an output will
+# not be tried again for an also configurable amount of seconds.
+output_fault_count_threshold = <%= @output_fault_count_threshold %>
+output_fault_penalty_seconds = <%= @output_fault_penalty_seconds %>
+
 # The number of parallel running processors.
 # Raise this number if your buffers are filling up.
 processbuffer_processors = <%= @processbuffer_processors %>
@@ -255,6 +273,28 @@ processor_wait_strategy = <%= @processor_wait_strategy %>
 # Must be a power of 2. (512, 1024, 2048, ...)
 ring_size = <%= @ring_size %>
 
+inputbuffer_ring_size = <%= @inputbuffer_ring_size %>
+inputbuffer_processors = <%= @inputbuffer_processors %>
+inputbuffer_wait_strategy = <%= @inputbuffer_wait_strategy %>
+
+# Enable the disk based message journal.
+message_journal_enabled = <%= @message_journal_enabled %>
+
+# The directory which will be used to store the message journal. The directory must me exclusively used by Graylog and
+# must not contain any other files than the ones created by Graylog itself.
+message_journal_dir = <%= @message_journal_dir %>
+
+# Journal hold messages before they could be written to Elasticsearch.
+# For a maximum of 12 hours or 5 GB whichever happens first.
+# During normal operation the journal will be smaller.
+message_journal_max_age = <%= @message_journal_max_age %>
+message_journal_max_size = <%= @message_journal_max_size %>
+
+message_journal_flush_age = <%= @message_journal_flush_age %>
+message_journal_flush_interval = <%= @message_journal_flush_interval %>
+message_journal_segment_age = <%= @message_journal_segment_age %>
+message_journal_segment_size = <%= @message_journal_segment_size %>
+
 # Number of threads used exclusively for dispatching internal events. Default is 2.
 async_eventbus_processors = <%= @async_eventbus_processors %>
 
@@ -273,16 +313,20 @@ lb_recognition_period_seconds = <%= @lb_recognition_period_seconds %>
 # Every message is matched against the configured streams and it can happen that a stream contains rules which
 # take an unusual amount of time to run, for example if its using regular expressions that perform excessive backtracking.
 # This will impact the processing of the entire server. To keep such misbehaving stream rules from impacting other
-# streams, Graylog2 limits the execution time for each stream.
+# streams, Graylog limits the execution time for each stream.
 # The default values are noted below, the timeout is in milliseconds.
 # If the stream matching for one stream took longer than the timeout value, and this happened more than "max_faults" times
 # that stream is disabled and a notification is shown in the web interface.
 stream_processing_timeout = <%= @stream_processing_timeout %>
 stream_processing_max_faults = <%= @stream_processing_max_faults %>
 
+# Length of the interval in seconds in which the alert conditions for all streams should be checked
+# and alarms are being sent.
+alert_check_interval = <%= @alert_check_interval %>
+
 # Since 0.21 the graylog2 server supports pluggable output modules. This means a single message can be written to multiple
 # outputs. The next setting defines the timeout for a single output module, including the default output module where all
-# messages end up. This setting is specified in milliseconds.
+# messages end up.
 
 # Time in milliseconds to wait for all message outputs to finish writing a single message.
 output_module_timeout = <%= @output_module_timeout %>
@@ -290,7 +334,7 @@ output_module_timeout = <%= @output_module_timeout %>
 # Time in milliseconds after which a detected stale master node is being rechecked on startup.
 stale_master_timeout = <%= @stale_master_timeout%>
 
-# Time in milliseconds which Graylog2 is waiting for all threads to stop on shutdown.
+# Time in milliseconds which Graylog is waiting for all threads to stop on shutdown.
 shutdown_timeout = <%= @shutdown_timeout %>
 
 # MongoDB Configuration
@@ -323,11 +367,11 @@ mongodb_max_connections = <%= @mongodb_max_connections %>
 mongodb_threads_allowed_to_block_multiplier = <%= @mongodb_threads_allowed_to_block_multiplier %>
 
 # Drools Rule File (Use to rewrite incoming log messages)
-# See: http://support.torch.sh/help/kb/graylog2-server/custom-message-rewritingprocessing
+# See: https://www.graylog.org/documentation/general/rewriting/
 <% if @rules_file %>
 rules_file = <%= @rules_file %>
 <% else %>
-#rules_file = /etc/graylog2.drl
+#rules_file = /etc/graylog/server/rules.drl
 <% end %>
 
 # Email transport
@@ -358,28 +402,6 @@ http_proxy_uri = <%= @http_proxy_uri %>
 #http_proxy_uri =
 <% end %>
 
-# Switch to enable/disable the off-heap message cache. Stores cached messages in the spool directory if set to true.
-# Stores the messages in an in-memory data structure if set to false.
-message_cache_off_heap = <%= @message_cache_off_heap %>
-
-# Directory for the off-heap message cache data. (absolute or relative)
-message_cache_spool_dir = <%= @message_cache_spool_dir %>
-
-# The commit interval for the message cache in milliseconds. Only affects message cache implementations that need to commit data.
-message_cache_commit_interval = <%= @message_cache_commit_interval %>
-
-# When more messages are coming in as we can process, incoming messages will be cached in memory until
-# they are ready to be processed. Per default this data structure is unbounded, so in situations of
-# constant high load, it will grow endlessly until all allocatable memory has been consumed and the
-# process dies.
-# To prevent this, the next setting allows you to define an upper bound for this memory cache, if the
-# number of messages in the cache has reached this limit, incoming messages will be dropped until it
-# has shrunk again.
-#
-# The default is 0, which means no upper bound.
-#
-input_cache_max_size = <%= @input_cache_max_size %>
-
 # Disable the optimization of Elasticsearch indices after index cycling. This may take some load from Elasticsearch
 # on heavily used systems with large indices, but it will decrease search performance. The default is to optimize
 # cycled indices.
@@ -394,12 +416,6 @@ index_optimization_max_num_segments = <%= @index_optimization_max_num_segments %
 # in regard to the time range of the messages (i. e. messages within a certain range may not be found). The default
 # is to calculate the time range on all open/available indices.
 disable_index_range_calculation = <%= @disable_index_range_calculation %>
-
-# Disable the output cache used to buffer messages when the backend storage, e. g. Elasticsearch or any other output
-# plugin is too slow to handle the amount of messages being indexed. It is recommended to disable the output cache
-# when using inputs with proper backpressure handling, e. g. Graylog2 radio, AMQP, or Kafka. The default is having
-# the output cache enabled.
-disable_output_cache = <%= @disable_output_cache %>
 
 # The threshold of the garbage collection runs. If GC runs take longer than this threshold, a system notification
 # will be generated to warn the administrator about possible problems with the system. Default is 1 second.
@@ -419,5 +435,36 @@ versionchecks_socket_timeout = <%= @versionchecks_socket_timeout %>
 groovy_shell_enable = <%= @groovy_shell_enable %>
 groovy_shell_port = <%= @groovy_shell_port %>
 
-# Enable collection of Graylog2-related metrics into MongoDB
+# Enable collection of Graylog-related metrics into MongoDB
 enable_metrics_collection = <%= @enable_metrics_collection %>
+
+# Disable the use of SIGAR for collecting system stats
+disable_sigar = <%= @disable_sigar %>
+
+# TELEMETRY
+# Enable publishing Telemetry data
+telemetry_enabled = <%= @telemetry_enabled %>
+
+# Base URL of the Telemetry service
+telemetry_url = <%= @telemetry_url %>
+
+# Authentication token for the Telemetry service
+telemetry_token = <%= @telemetry_token %>
+
+# How often the Telemetry data should be reported
+telemetry_report_interval = <%= @telemetry_report_interval %>
+
+# Number of Telemetry data sets to store locally if the connection to the Telemetry service fails
+telemetry_max_queue_size = <%= @telemetry_max_queue_size %>
+
+# TTL for Telemetry data in local cache
+telemetry_cache_timeout = <%= @telemetry_cache_timeout %>
+
+# Connect timeout for HTTP connections
+telemetry_service_connect_timeout = <%= @telemetry_service_connect_timeout %>
+
+# Write timeout for HTTP connections
+telemetry_service_write_timeout = <%= @telemetry_service_write_timeout %>
+
+# Read timeout for HTTP connections
+telemetry_service_read_timeout = <%= @telemetry_service_read_timeout %>
