--- a/templates/server.sysconfig.erb
+++ b/templates/server.sysconfig.erb
@@ -4,11 +4,11 @@
 JAVA=/usr/bin/java
 
 # Might be used to adjust the Java heap size. (i.e. "-Xms1024m -Xmx2048m")
-GRAYLOG2_SERVER_JAVA_OPTS="<%= @java_opts %>"
+GRAYLOG_SERVER_JAVA_OPTS="<%= @java_opts %>"
 
-# Pass some extra args to graylog2-server. (i.e. "-d" to enable debug mode)
-GRAYLOG2_SERVER_ARGS="<%= @extra_args %>"
+# Pass some extra args to graylog-server. (i.e. "-d" to enable debug mode)
+GRAYLOG_SERVER_ARGS="<%= @extra_args %>"
 
-# Program that will be used to wrap the graylog2-server command. Useful to
+# Program that will be used to wrap the graylog-server command. Useful to
 # support programs like authbind.
-GRAYLOG2_COMMAND_WRAPPER="<%= @command_wrapper %>"
+GRAYLOG_COMMAND_WRAPPER="<%= @command_wrapper %>"
