--- a/templates/server.conf.erb
+++ b/templates/server.conf.erb
@@ -338,25 +338,11 @@ stale_master_timeout = <%= @stale_master_timeout%>
 shutdown_timeout = <%= @shutdown_timeout %>
 
 # MongoDB Configuration
-mongodb_useauth = <%= @mongodb_useauth %>
-<% if @mongodb_user %>
-mongodb_user = <%= @mongodb_user %>
+<%= if @mongodb_useauth %>
+mongodb_uri = mongodb://<%= @mongodb_user %>:<%= @mongodb_password %>@<%= @mongodb_hosts.join(',') %>/<%= @mongodb_database %><% if @mongodb_replica_set %>?replicaSet=<%= @mongodb_replica_set %>
 <% else %>
-#mongodb_user = grayloguser
+mongodb_uri = mongodb://<%= @mongodb_hosts.join(',') %>/<%= @mongodb_database %><% if @mongodb_replica_set %>?replicaSet=<%= @mongodb_replica_set %>
 <% end %>
-<% if @mongodb_password %>
-mongodb_password = <%= @mongodb_password %>
-<% else %>
-#mongodb_password = 123
-<% end %>
-mongodb_host = <%= @mongodb_host %>
-<% if @mongodb_replica_set %>
-mongodb_replica_set = <%= @mongodb_replica_set.join(',') %>
-<% else %>
-#mongodb_replica_set = localhost:27017,localhost:27018,localhost:27019
-<% end %>
-mongodb_database = <%= @mongodb_database %>
-mongodb_port = <%= @mongodb_port %>
 
 # Raise this according to the maximum connections your MongoDB server can handle if you encounter MongoDB connection problems.
 mongodb_max_connections = <%= @mongodb_max_connections %>
