--- a/templates/server.conf.erb
+++ b/templates/server.conf.erb
@@ -338,10 +338,10 @@ stale_master_timeout = <%= @stale_master_timeout%>
 shutdown_timeout = <%= @shutdown_timeout %>
 
 # MongoDB Configuration
-<%= if @mongodb_useauth %>
-mongodb_uri = mongodb://<%= @mongodb_user %>:<%= @mongodb_password %>@<%= @mongodb_hosts.join(',') %>/<%= @mongodb_database %><% if @mongodb_replica_set %>?replicaSet=<%= @mongodb_replica_set %>
+<% if @mongodb_useauth %>
+mongodb_uri = mongodb://<%= @mongodb_user %>:<%= @mongodb_password %>@<%= @mongodb_hosts %>/<%= @mongodb_database %><% if @mongodb_replica_set %>?replicaSet=<%= @mongodb_replica_set %><% end %>
 <% else %>
-mongodb_uri = mongodb://<%= @mongodb_hosts.join(',') %>/<%= @mongodb_database %><% if @mongodb_replica_set %>?replicaSet=<%= @mongodb_replica_set %>
+mongodb_uri = mongodb://<%= @mongodb_hosts %>/<%= @mongodb_database %><% if @mongodb_replica_set %>?replicaSet=<%= @mongodb_replica_set %><% end %>
 <% end %>
 
 # Raise this according to the maximum connections your MongoDB server can handle if you encounter MongoDB connection problems.
